k8s/apps/bitwarden-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitwarden-db
spec:
  serviceName: bitwarden-db
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden-db
  template:
    metadata:
      labels:
        app: bitwarden-db
    spec:
      containers:
      - name: mariadb
        image: mariadb:10
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: bitwarden-db-data
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-db
spec:
  selector:
    app: bitwarden-db
  ports:
  - port: 3306
    targetPort: 3306
