k8s/apps/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin:latest
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /data/movies
        - name: tvshows
          mountPath: /data/tvshows
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: movies
        persistentVolumeClaim:
          claimName: jellyfin-movies
      - name: tvshows
        persistentVolumeClaim:
          claimName: jellyfin-tvshows
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - port: 8096
    targetPort: 8096
