k8s/apps/smokeping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smokeping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smokeping
  template:
    metadata:
      labels:
        app: smokeping
    spec:
      containers:
      - name: smokeping
        image: lscr.io/linuxserver/smokeping:latest
        resources:
          limits:
            memory: "4Gi"
          requests:
            memory: "512Mi"
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /data
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: smokeping-config
      - name: data
        persistentVolumeClaim:
          claimName: smokeping-data
---
apiVersion: v1
kind: Service
metadata:
  name: smokeping
spec:
  selector:
    app: smokeping
  ports:
  - port: 80
    targetPort: 80
